--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-moment-proptypes": "^1.8.1",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
